--- a/prd/magnolia-public-backend-sts2.yaml
+++ b/prd/magnolia-public-backend-sts2.yaml
@@ -1,18 +1,8 @@
 ---
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: gp3-ebs
-provisioner: kubernetes.io/aws-ebs
-volumeBindingMode: WaitForFirstConsumer
-parameters:
-  type: gp3
-  fsType: ext4
----
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-public-1
+  name: pvc-public-2
   namespace: zb-schools
 spec:
   accessModes:
@@ -22,43 +12,31 @@ spec:
     requests:
       storage: 10Gi
 ---
-apiVersion: policy/v1
-kind: PodDisruptionBudget
-metadata:
-  name: magnolia-public-backend-pdb
-  namespace: zb-schools
-spec:
-  minAvailable: 1
-  selector:
-    matchLabels:
-      app: magnolia-public-backend
----
 apiVersion: apps/v1
-kind: Deployment 
+kind: StatefulSet 
 metadata:
-  annotations:
-    app: magnolia-public-backend
+  generation: 2
   labels:
     app: magnolia-public-backend
-    appn: magnolia-public-backend-1
-  name: magnolia-public-backend-1
+    appn: magnolia-public-backend-2
+  name: magnolia-public-backend-2
   namespace: zb-schools
 spec:
+  persistentVolumeClaimRetentionPolicy:
+    whenDeleted: Retain
+    whenScaled: Retain
+  podManagementPolicy: OrderedReady
   replicas: 1
-  revisionHistoryLimit: 10
+  revisionHistoryLimit: 3
   selector:
     matchLabels:
       app: magnolia-public-backend
-      appn: magnolia-public-backend-1
-  strategy:
-    rollingUpdate:
-      maxSurge: 3
-      maxUnavailable: 0
-    type: RollingUpdate
+      appn: magnolia-public-backend-2
+  serviceName: magnolia-public-backend-2-svc
   template:
     metadata:
       annotations:
-        kubectl.kubernetes.io/restartedAt: "2024-11-19T17:16:12+08:00"
+        kubectl.kubernetes.io/restartedAt: "2026-02-05T14:16:12+08:00"
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/agent-inject-secret-db-config: zb-schools/db/creds/zb-schools-db-role
         vault.hashicorp.com/agent-inject-secret-kv-config: zb-schools/kv/config
@@ -69,14 +47,14 @@ spec:
       creationTimestamp: null
       labels:
         app: magnolia-public-backend
-        appn: magnolia-public-backend-1
+        appn: magnolia-public-backend-2
     spec:
       containers:
         - env:
             - name: TZ
               value: CST-8
             - name: DB_NAME_PUBLIC
-              value: mgnl_public_1
+              value: mgnl_public_2
             - name: BASE_URL
               value: "https://www.zbschools.sg"
             - name: ENV_TYPE
@@ -136,7 +114,7 @@ spec:
       volumes:
         - name: pvc-public
           persistentVolumeClaim:
-             claimName: pvc-public-1
+             claimName: pvc-public-2
       dnsPolicy: ClusterFirst
       imagePullSecrets:
         - name: aws-ecr
@@ -150,7 +128,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: magnolia-public-backend-svc
+  name: magnolia-public-backend-2-svc
   namespace: zb-schools
 spec:
   internalTrafficPolicy: Cluster
@@ -163,32 +141,6 @@ spec:
       protocol: TCP
       targetPort: 8080
   selector:
-    app: magnolia-public-backend
-  sessionAffinity: ClientIP
-  sessionAffinityConfig:
-    clientIP:
-      timeoutSeconds: 86400
-  type: ClusterIP
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: magnolia-public-backend-svc1
-  namespace: zb-schools
-spec:
-  internalTrafficPolicy: Cluster
-  ipFamilies:
-    - IPv4
-  ipFamilyPolicy: SingleStack
-  ports:
-    - name: public
-      port: 8080
-      protocol: TCP
-      targetPort: 8080
-  selector:
-    appn: magnolia-public-backend-1
-  sessionAffinity: ClientIP
-  sessionAffinityConfig:
-    clientIP:
-      timeoutSeconds: 86400
+    appn: magnolia-public-backend-2
+  sessionAffinity: None
   type: ClusterIP
