--- a/dev/magnolia-public-backend-sts1.yaml
+++ b/dev/magnolia-public-backend-sts1.yaml
@@ -12,7 +12,7 @@ parameters:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-public-2
+  name: pvc-public-1
   namespace: zb-schools
 spec:
   accessModes:
@@ -23,14 +23,14 @@ spec:
       storage: 5Gi
 ---
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   annotations:
     app: magnolia-public-backend
   labels:
     app: magnolia-public-backend
-    appn: magnolia-public-backend-2
-  name: magnolia-public-backend-2
+    appn: magnolia-public-backend-1
+  name: magnolia-public-backend-1
   namespace: zb-schools
 spec:
   replicas: 1
@@ -38,12 +38,13 @@ spec:
   selector:
     matchLabels:
       app: magnolia-public-backend
-      appn: magnolia-public-backend-2
+      appn: magnolia-public-backend-1
   strategy:
     rollingUpdate:
       maxSurge: 1
       maxUnavailable: 0
     type: RollingUpdate
+    
   template:
     metadata:
       annotations:
@@ -54,41 +55,39 @@ spec:
         vault.hashicorp.com/agent-inject-secret-kv-config: zb-schools/kv/config
         vault.hashicorp.com/agent-inject-secret-kv-aksk: zb-schools/kv/aksk
         vault.hashicorp.com/log-level: debug
-        vault.hashicorp.com/namespace: admin/engr/zb_schools/qa
+        vault.hashicorp.com/namespace: admin/engr/zb_schools/dev
         vault.hashicorp.com/role: sph-zb-schools-cms-vault-reader
       creationTimestamp: null
       labels:
         app: magnolia-public-backend
-        appn: magnolia-public-backend-2
+        appn: magnolia-public-backend-1
     spec:
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
-          - labelSelector:
-              matchExpressions:
-                - key: appn
+            - labelSelector:
+                matchExpressions:
+                - key: app
                   operator: In
                   values:
-                  - magnolia-author-backend-1
-                  - magnolia-public-backend-1
-                  - magnolia-public-backend-2
-                  - magnolia-public-backend-3
+                  - magnolia-author-backend
+                  - magnolia-public-backend
                   - saas-homework-service
-            topologyKey: kubernetes.io/hostname
+              topologyKey: kubernetes.io/hostname
       containers:
         - env:
             - name: TZ
               value: CST-8
             - name: DB_NAME_PUBLIC
-              value: mgnl_public_2
+              value: mgnl_public_1
+            - name: BASE_URL
+              value: "https://sit.zbschools.sg"
             - name: ENV_TYPE
-              value: "qa"
+              value: "sit"
             - name: INSTANCE_TYPE
               value: "magnoliaPublic"
-            - name: BASE_URL
-              value: "https://uat.zbschools.sg"
-          image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-backend"
-          imagePullPolicy: Always
+          image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-backend"
+          imagePullPolicy: IfNotPresent
           name: magolia-public
           ports:
             - containerPort: 8080
@@ -115,13 +114,6 @@ spec:
             periodSeconds: 5
             successThreshold: 1
             timeoutSeconds: 2
-          resources:
-            limits:
-              cpu: "4"
-              memory: 12Gi
-            requests:
-              cpu: "4"
-              memory: 12Gi
           livenessProbe:
             failureThreshold: 6
             httpGet:
@@ -132,6 +124,13 @@ spec:
             periodSeconds: 30
             successThreshold: 1
             timeoutSeconds: 1
+          resources:
+            limits:
+              cpu: "4"
+              memory: 12Gi
+            requests:
+              cpu: "4"
+              memory: 12Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
@@ -140,7 +139,7 @@ spec:
       volumes:
         - name: pvc-public
           persistentVolumeClaim:
-             claimName: pvc-public-2
+             claimName: pvc-public-1
       dnsPolicy: ClusterFirst
       imagePullSecrets:
         - name: aws-ecr
@@ -168,16 +167,13 @@ spec:
       targetPort: 8080
   selector:
     app: magnolia-public-backend
-  sessionAffinity: ClientIP
-  sessionAffinityConfig:
-    clientIP:
-      timeoutSeconds: 86400
+  sessionAffinity: None
   type: ClusterIP
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: magnolia-public-backend-svc2
+  name: magnolia-public-backend-1-svc
   namespace: zb-schools
 spec:
   internalTrafficPolicy: Cluster
@@ -190,9 +186,6 @@ spec:
       protocol: TCP
       targetPort: 8080
   selector:
-    appn: magnolia-public-backend-2
-  sessionAffinity: ClientIP
-  sessionAffinityConfig:
-    clientIP:
-      timeoutSeconds: 86400
+    appn: magnolia-public-backend-1
+  sessionAffinity: None
   type: ClusterIP
