--- a/dev/magnolia-public-backend-sts2.yaml
+++ b/dev/magnolia-public-backend-sts2.yaml
@@ -1,18 +1,8 @@
 ---
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: gp3-ebs
-provisioner: kubernetes.io/aws-ebs
-volumeBindingMode: WaitForFirstConsumer
-parameters:
-  type: gp3
-  fsType: ext4
----
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-author-1
+  name: pvc-public-2
   namespace: zb-schools
 spec:
   accessModes:
@@ -23,56 +13,55 @@ spec:
       storage: 5Gi
 ---
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   annotations:
-    app: magnolia-author-backend
-    appn: magnolia-author-backend-1
+    app: magnolia-public-backend
   labels:
-    app: magnolia-author-backend
-    appn: magnolia-author-backend-1
-  name: magnolia-author-backend
+    app: magnolia-public-backend
+    appn: magnolia-public-backend-2
+  name: magnolia-public-backend-2
   namespace: zb-schools
 spec:
   replicas: 1
+  revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app: magnolia-author-backend
-      appn: magnolia-author-backend-1
+      app: magnolia-public-backend
+      appn: magnolia-public-backend-2
   strategy:
     rollingUpdate:
       maxSurge: 1
       maxUnavailable: 0
     type: RollingUpdate
+    
   template:
     metadata:
       annotations:
         karpenter.sh/do-not-disrupt: "true"
-        kubectl.kubernetes.io/restartedAt: "2024-06-26T13:41:20+08:00"
+        kubectl.kubernetes.io/restartedAt: "2024-06-25T17:16:12+08:00"
         vault.hashicorp.com/agent-inject: "true"
-        vault.hashicorp.com/role: "sph-zb-schools-cms-vault-reader"
-        vault.hashicorp.com/agent-inject-secret-db-config: "zb-schools/db/creds/zb-schools-db-role"
-        vault.hashicorp.com/agent-inject-secret-kv-config: "zb-schools/kv/config"
-        vault.hashicorp.com/agent-inject-secret-kv-aksk: "zb-schools/kv/aksk"
-        vault.hashicorp.com/log-level: "debug"
-        vault.hashicorp.com/namespace: "admin/engr/zb_schools/prd"
+        vault.hashicorp.com/agent-inject-secret-db-config: zb-schools/db/creds/zb-schools-db-role
+        vault.hashicorp.com/agent-inject-secret-kv-config: zb-schools/kv/config
+        vault.hashicorp.com/agent-inject-secret-kv-aksk: zb-schools/kv/aksk
+        vault.hashicorp.com/log-level: debug
+        vault.hashicorp.com/namespace: admin/engr/zb_schools/dev
+        vault.hashicorp.com/role: sph-zb-schools-cms-vault-reader
       creationTimestamp: null
       labels:
-        app: magnolia-author-backend
-        appn: magnolia-author-backend-1
+        app: magnolia-public-backend
+        appn: magnolia-public-backend-2
     spec:
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
                 matchExpressions:
-                - key: appn
+                - key: app
                   operator: In
                   values:
-                  - magnolia-author-backend-1
-                  - magnolia-public-backend-1
-                  - magnolia-public-backend-2
-                  - magnolia-public-backend-3
+                  - magnolia-author-backend
+                  - magnolia-public-backend
                   - saas-homework-service
               topologyKey: kubernetes.io/hostname
       containers:
@@ -80,16 +69,16 @@ spec:
             - name: TZ
               value: CST-8
             - name: DB_NAME_PUBLIC
-              value: mgnl_author
+              value: mgnl_public_2
             - name: BASE_URL
-              value: "https://www.zbschools.sg/authorFrontend"
+              value: "https://sit.zbschools.sg"
             - name: ENV_TYPE
-              value: "prd"
+              value: "sit"
             - name: INSTANCE_TYPE
-              value: "magnoliaAuthor"
-          image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-author-backend"
+              value: "magnoliaPublic"
+          image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-backend"
           imagePullPolicy: IfNotPresent
-          name: magolia-backend
+          name: magolia-public
           ports:
             - containerPort: 8080
               name: port8080
@@ -98,18 +87,18 @@ spec:
             failureThreshold: 100000
             httpGet:
               path: >-
-                /magnoliaAuthor/.resources/defaultMagnoliaLoginForm/img/logo-magnolia.gif
+                /magnoliaPublic/.resources/defaultMagnoliaLoginForm/img/logo-magnolia.gif
               port: 8080
               scheme: HTTP
-            initialDelaySeconds: 120
+            initialDelaySeconds: 120   
             periodSeconds: 10
             successThreshold: 1
-            timeoutSeconds: 2
+            timeoutSeconds: 2	
           readinessProbe:
             failureThreshold: 2
             httpGet:
               path: >-
-                /magnoliaAuthor/.resources/defaultMagnoliaLoginForm/img/logo-magnolia.gif
+                /magnoliaPublic/.resources/defaultMagnoliaLoginForm/img/logo-magnolia.gif
               port: 8080
               scheme: HTTP
             periodSeconds: 5
@@ -119,7 +108,7 @@ spec:
             failureThreshold: 6
             httpGet:
               path: >-
-                /magnoliaAuthor/.resources/defaultMagnoliaLoginForm/img/logo-magnolia.gif
+                /magnoliaPublic/.resources/defaultMagnoliaLoginForm/img/logo-magnolia.gif
               port: 8080
               scheme: HTTP
             periodSeconds: 30
@@ -127,43 +116,66 @@ spec:
             timeoutSeconds: 1
           resources:
             limits:
-              cpu: "12"
-              memory: 24Gi
+              cpu: "4"
+              memory: 12Gi
             requests:
-              cpu: "12"
-              memory: 24Gi
+              cpu: "4"
+              memory: 12Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
             - mountPath: /usr/local/tomcat/webapps/repositories
-              name: pvc-author
+              name: pvc-public
       volumes:
-        - name: pvc-author
+        - name: pvc-public
           persistentVolumeClaim:
-             claimName: pvc-author-1
+             claimName: pvc-public-2
       dnsPolicy: ClusterFirst
       imagePullSecrets:
         - name: aws-ecr
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
-      terminationGracePeriodSeconds: 30
+      serviceAccount: service-account-sph-zb-schools
       serviceAccountName: service-account-sph-zb-schools
+      terminationGracePeriodSeconds: 30
 ---
 apiVersion: v1
 kind: Service
 metadata:
+  name: magnolia-public-backend-svc
   namespace: zb-schools
-  name: magnolia-author-backend-svc
 spec:
+  internalTrafficPolicy: Cluster
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
   ports:
-    - port: 8080
-      targetPort: 8080
+    - name: public
+      port: 8080
       protocol: TCP
-  type: ClusterIP
+      targetPort: 8080
   selector:
-    app: magnolia-author-backend
-  sessionAffinity: ClientIP
-  sessionAffinityConfig:
-    clientIP:
-      timeoutSeconds: 86400
+    app: magnolia-public-backend
+  sessionAffinity: None
+  type: ClusterIP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: magnolia-public-backend-2-svc
+  namespace: zb-schools
+spec:
+  internalTrafficPolicy: Cluster
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
+  ports:
+    - name: public
+      port: 8080
+      protocol: TCP
+      targetPort: 8080
+  selector:
+    appn: magnolia-public-backend-2
+  sessionAffinity: None
+  type: ClusterIP
