--- a/dev/magnolia-public-backend-sts3.yaml
+++ b/dev/magnolia-public-backend-sts3.yaml
@@ -1,14 +1,4 @@
 ---
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: gp3-ebs
-provisioner: kubernetes.io/aws-ebs
-volumeBindingMode: WaitForFirstConsumer
-parameters:
-  type: gp3
-  fsType: ext4
----
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -20,21 +10,10 @@ spec:
   storageClassName: gp3-ebs
   resources:
     requests:
-      storage: 10Gi
----
-apiVersion: policy/v1
-kind: PodDisruptionBudget
-metadata:
-  name: magnolia-public-backend-pdb
-  namespace: zb-schools
-spec:
-  minAvailable: 1
-  selector:
-    matchLabels:
-      app: magnolia-public-backend
+      storage: 5Gi
 ---
 apiVersion: apps/v1
-kind: Deployment 
+kind: StatefulSet
 metadata:
   annotations:
     app: magnolia-public-backend
@@ -52,25 +31,39 @@ spec:
       appn: magnolia-public-backend-3
   strategy:
     rollingUpdate:
-      maxSurge: 3
+      maxSurge: 1
       maxUnavailable: 0
     type: RollingUpdate
+    
   template:
     metadata:
       annotations:
-        kubectl.kubernetes.io/restartedAt: "2024-11-19T17:16:12+08:00"
+        karpenter.sh/do-not-disrupt: "true"
+        kubectl.kubernetes.io/restartedAt: "2024-06-25T17:16:12+08:00"
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/agent-inject-secret-db-config: zb-schools/db/creds/zb-schools-db-role
         vault.hashicorp.com/agent-inject-secret-kv-config: zb-schools/kv/config
         vault.hashicorp.com/agent-inject-secret-kv-aksk: zb-schools/kv/aksk
         vault.hashicorp.com/log-level: debug
-        vault.hashicorp.com/namespace: admin/engr/zb_schools/prd
+        vault.hashicorp.com/namespace: admin/engr/zb_schools/dev
         vault.hashicorp.com/role: sph-zb-schools-cms-vault-reader
       creationTimestamp: null
       labels:
         app: magnolia-public-backend
         appn: magnolia-public-backend-3
     spec:
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchExpressions:
+                - key: app
+                  operator: In
+                  values:
+                  - magnolia-author-backend
+                  - magnolia-public-backend
+                  - saas-homework-service
+              topologyKey: kubernetes.io/hostname
       containers:
         - env:
             - name: TZ
@@ -78,12 +71,12 @@ spec:
             - name: DB_NAME_PUBLIC
               value: mgnl_public_3
             - name: BASE_URL
-              value: "https://www.zbschools.sg"
+              value: "https://sit.zbschools.sg"
             - name: ENV_TYPE
-              value: "prd"
+              value: "sit"
             - name: INSTANCE_TYPE
               value: "magnoliaPublic"
-          image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-backend"
+          image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-backend"
           imagePullPolicy: IfNotPresent
           name: magolia-public
           ports:
@@ -123,11 +116,11 @@ spec:
             timeoutSeconds: 1
           resources:
             limits:
-              cpu: "12"
-              memory: 24Gi
+              cpu: "4"
+              memory: 12Gi
             requests:
-              cpu: "12"
-              memory: 24Gi
+              cpu: "4"
+              memory: 12Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
@@ -164,16 +157,13 @@ spec:
       targetPort: 8080
   selector:
     app: magnolia-public-backend
-  sessionAffinity: ClientIP
-  sessionAffinityConfig:
-    clientIP:
-      timeoutSeconds: 86400
+  sessionAffinity: None
   type: ClusterIP
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: magnolia-public-backend-svc3
+  name: magnolia-public-backend-3-svc
   namespace: zb-schools
 spec:
   internalTrafficPolicy: Cluster
@@ -187,8 +177,5 @@ spec:
       targetPort: 8080
   selector:
     appn: magnolia-public-backend-3
-  sessionAffinity: ClientIP
-  sessionAffinityConfig:
-    clientIP:
-      timeoutSeconds: 86400
+  sessionAffinity: None
   type: ClusterIP
