--- a/prd/magnolia-author-backend-sts1.yaml
+++ b/prd/magnolia-author-backend-sts1.yaml
@@ -42,19 +42,19 @@ spec:
     matchLabels:
       app: magnolia-author-backend
       appn: magnolia-author-backend-1
-  serviceName: magnolia-author-backend-1-svc
+  serviceName: magnolia-author-backend-1-svc  
   template:
     metadata:
       annotations:
         karpenter.sh/do-not-disrupt: "true"
-        kubectl.kubernetes.io/restartedAt: "2024-06-26T13:41:20+08:00"
+        kubectl.kubernetes.io/restartedAt: "2026-02-05T13:41:20+08:00"
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/role: "sph-zb-schools-cms-vault-reader"
         vault.hashicorp.com/agent-inject-secret-db-config: "zb-schools/db/creds/zb-schools-db-role"
         vault.hashicorp.com/agent-inject-secret-kv-config: "zb-schools/kv/config"
         vault.hashicorp.com/agent-inject-secret-kv-aksk: "zb-schools/kv/aksk"
         vault.hashicorp.com/log-level: "debug"
-        vault.hashicorp.com/namespace: "admin/engr/zb_schools/dev"
+        vault.hashicorp.com/namespace: "admin/engr/zb_schools/prd"
       creationTimestamp: null
       labels:
         app: magnolia-author-backend
@@ -76,25 +76,23 @@ spec:
         - env:
             - name: TZ
               value: CST-8
+            - name: ENV_TYPE
+              value: "prd"
+            - name: INSTANCE_TYPE
+              value: "magnoliaAuthor"
             - name: DB_NAME_PUBLIC
               value: mgnl_author
             - name: BASE_URL
-              value: "https://sit.zbschools.sg/authorFrontend"
-            - name: ENV_TYPE
-              value: "sit"
-            - name: "POD"
-              value: "magnoliaAuthor"
-            - name: INSTANCE_TYPE
-              value: "magnoliaAuthor"
-          image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-author-backend"
+              value: "https://www.zbschools.sg/authorFrontend"            
+          image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-author-backend"
           imagePullPolicy: IfNotPresent
           name: magolia-backend
           ports:
             - containerPort: 8080
               name: port8080
               protocol: TCP
-          readinessProbe:
-            failureThreshold: 30
+          startupProbe:
+            failureThreshold: 100000
             httpGet:
               path: >-
                 /magnoliaAuthor/.resources/defaultMagnoliaLoginForm/img/logo-magnolia.gif
@@ -103,14 +101,34 @@ spec:
             initialDelaySeconds: 120
             periodSeconds: 10
             successThreshold: 1
+            timeoutSeconds: 2
+          readinessProbe:
+            failureThreshold: 2
+            httpGet:
+              path: >-
+                /magnoliaAuthor/.resources/defaultMagnoliaLoginForm/img/logo-magnolia.gif
+              port: 8080
+              scheme: HTTP
+            periodSeconds: 5
+            successThreshold: 1
+            timeoutSeconds: 2
+          livenessProbe:
+            failureThreshold: 6
+            httpGet:
+              path: >-
+                /magnoliaAuthor/.resources/defaultMagnoliaLoginForm/img/logo-magnolia.gif
+              port: 8080
+              scheme: HTTP
+            periodSeconds: 30
+            successThreshold: 1
             timeoutSeconds: 1
           resources:
             limits:
-              cpu: "4"
-              memory: 12Gi
+              cpu: "12"
+              memory: 24Gi
             requests:
-              cpu: "4"
-              memory: 12Gi
+              cpu: "12"
+              memory: 24Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
@@ -142,7 +160,10 @@ spec:
   type: ClusterIP
   selector:
     app: magnolia-author-backend
-  sessionAffinity: None
+  sessionAffinity: ClientIP
+  sessionAffinityConfig:
+    clientIP:
+      timeoutSeconds: 86400
 --- 
 apiVersion: v1
 kind: Service
