--- a/prd/magnolia-public-backend-sts1.yaml
+++ b/prd/magnolia-public-backend-sts1.yaml
@@ -12,7 +12,7 @@ parameters:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-public-2
+  name: pvc-public-1
   namespace: zb-schools
 spec:
   accessModes:
@@ -20,76 +20,69 @@ spec:
   storageClassName: gp3-ebs
   resources:
     requests:
-      storage: 5Gi
+      storage: 10Gi
 ---
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: policy/v1
+kind: PodDisruptionBudget
 metadata:
-  annotations:
-    app: magnolia-public-backend
-  labels:
-    app: magnolia-public-backend
-    appn: magnolia-public-backend-2
-  name: magnolia-public-backend-2
+  name: magnolia-public-backend-pdb
   namespace: zb-schools
 spec:
-  replicas: 1
-  revisionHistoryLimit: 10
+  minAvailable: 1
   selector:
     matchLabels:
       app: magnolia-public-backend
-      appn: magnolia-public-backend-2
-  strategy:
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 0
-    type: RollingUpdate
-    
+---
+apiVersion: apps/v1
+kind: StatefulSet 
+metadata:
+  generation: 2
+  labels:
+    app: magnolia-public-backend
+    appn: magnolia-public-backend-1
+  name: magnolia-public-backend-1
+  namespace: zb-schools
+spec:
+  persistentVolumeClaimRetentionPolicy:
+    whenDeleted: Retain
+    whenScaled: Retain
+  podManagementPolicy: OrderedReady
+  replicas: 1
+  revisionHistoryLimit: 3
+  selector:
+    matchLabels:
+      app: magnolia-public-backend
+      appn: magnolia-public-backend-1
+  serviceName: magnolia-public-backend-1-svc
   template:
     metadata:
       annotations:
-        kubectl.kubernetes.io/restartedAt: "2024-06-25T17:16:12+08:00"
+        kubectl.kubernetes.io/restartedAt: "2026-02-05T14:16:12+08:00"
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/agent-inject-secret-db-config: zb-schools/db/creds/zb-schools-db-role
         vault.hashicorp.com/agent-inject-secret-kv-config: zb-schools/kv/config
         vault.hashicorp.com/agent-inject-secret-kv-aksk: zb-schools/kv/aksk
         vault.hashicorp.com/log-level: debug
-        vault.hashicorp.com/namespace: admin/engr/zb_schools/dev
+        vault.hashicorp.com/namespace: admin/engr/zb_schools/prd
         vault.hashicorp.com/role: sph-zb-schools-cms-vault-reader
       creationTimestamp: null
       labels:
         app: magnolia-public-backend
-        appn: magnolia-public-backend-2
+        appn: magnolia-public-backend-1
     spec:
-      affinity:
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchExpressions:
-                - key: appn
-                  operator: In
-                  values:
-                  - magnolia-author-backend
-                  - magnolia-public-backend-1
-                  - magnolia-public-backend-2
-                  - magnolia-public-backend-3
-                  - saas-homework-service
-              topologyKey: kubernetes.io/hostname
       containers:
         - env:
             - name: TZ
               value: CST-8
             - name: DB_NAME_PUBLIC
-              value: mgnl_public_2
+              value: mgnl_public_1
             - name: BASE_URL
-              value: "https://sit.zbschools.sg"
+              value: "https://www.zbschools.sg"
             - name: ENV_TYPE
-              value: "sit"
-            - name: "POD"
-              vaule: "magnoliaPublic"
+              value: "prd"
             - name: INSTANCE_TYPE
               value: "magnoliaPublic"
-          image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-backend"
+          image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-backend"
           imagePullPolicy: IfNotPresent
           name: magolia-public
           ports:
@@ -129,11 +122,11 @@ spec:
             timeoutSeconds: 1
           resources:
             limits:
-              cpu: "4"
-              memory: 12Gi
+              cpu: "12"
+              memory: 24Gi
             requests:
-              cpu: "4"
-              memory: 12Gi
+              cpu: "12"
+              memory: 24Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
@@ -142,7 +135,7 @@ spec:
       volumes:
         - name: pvc-public
           persistentVolumeClaim:
-             claimName: pvc-public-2
+             claimName: pvc-public-1
       dnsPolicy: ClusterFirst
       imagePullSecrets:
         - name: aws-ecr
@@ -170,16 +163,13 @@ spec:
       targetPort: 8080
   selector:
     app: magnolia-public-backend
-  sessionAffinity: ClientIP
-  sessionAffinityConfig:
-    clientIP:
-      timeoutSeconds: 86400
+  sessionAffinity: None
   type: ClusterIP
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: magnolia-public-backend-svc2
+  name: magnolia-public-backend-1-svc
   namespace: zb-schools
 spec:
   internalTrafficPolicy: Cluster
@@ -192,9 +182,6 @@ spec:
       protocol: TCP
       targetPort: 8080
   selector:
-    appn: magnolia-public-backend-2
-  sessionAffinity: ClientIP
-  sessionAffinityConfig:
-    clientIP:
-      timeoutSeconds: 86400
+    appn: magnolia-public-backend-1
+  sessionAffinity: None
   type: ClusterIP
