--- a/qa/magnolia-public-backend-sts2.yaml
+++ b/qa/magnolia-public-backend-sts2.yaml
@@ -1,18 +1,8 @@
 ---
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: gp3-ebs
-provisioner: kubernetes.io/aws-ebs
-volumeBindingMode: WaitForFirstConsumer
-parameters:
-  type: gp3
-  fsType: ext4
----
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-public-3
+  name: pvc-public-2
   namespace: zb-schools
 spec:
   accessModes:
@@ -23,14 +13,14 @@ spec:
       storage: 5Gi
 ---
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   annotations:
     app: magnolia-public-backend
   labels:
     app: magnolia-public-backend
-    appn: magnolia-public-backend-3
-  name: magnolia-public-backend-3
+    appn: magnolia-public-backend-2
+  name: magnolia-public-backend-2
   namespace: zb-schools
 spec:
   replicas: 1
@@ -38,58 +28,54 @@ spec:
   selector:
     matchLabels:
       app: magnolia-public-backend
-      appn: magnolia-public-backend-3
+      appn: magnolia-public-backend-2
   strategy:
     rollingUpdate:
       maxSurge: 1
       maxUnavailable: 0
     type: RollingUpdate
-    
   template:
     metadata:
       annotations:
+        karpenter.sh/do-not-disrupt: "true"
         kubectl.kubernetes.io/restartedAt: "2024-06-25T17:16:12+08:00"
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/agent-inject-secret-db-config: zb-schools/db/creds/zb-schools-db-role
         vault.hashicorp.com/agent-inject-secret-kv-config: zb-schools/kv/config
         vault.hashicorp.com/agent-inject-secret-kv-aksk: zb-schools/kv/aksk
         vault.hashicorp.com/log-level: debug
-        vault.hashicorp.com/namespace: admin/engr/zb_schools/dev
+        vault.hashicorp.com/namespace: admin/engr/zb_schools/qa
         vault.hashicorp.com/role: sph-zb-schools-cms-vault-reader
       creationTimestamp: null
       labels:
         app: magnolia-public-backend
-        appn: magnolia-public-backend-3
+        appn: magnolia-public-backend-2
     spec:
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchExpressions:
-                - key: appn
+          - labelSelector:
+              matchExpressions:
+                - key: app
                   operator: In
                   values:
                   - magnolia-author-backend
-                  - magnolia-public-backend-1
-                  - magnolia-public-backend-2
-                  - magnolia-public-backend-3
+                  - magnolia-public-backend
                   - saas-homework-service
-              topologyKey: kubernetes.io/hostname
+            topologyKey: kubernetes.io/hostname
       containers:
         - env:
             - name: TZ
               value: CST-8
             - name: DB_NAME_PUBLIC
-              value: mgnl_public_3
-            - name: BASE_URL
-              value: "https://sit.zbschools.sg"
+              value: mgnl_public_2
             - name: ENV_TYPE
-              value: "sit"
-            - name: "POD"
-              value: "magnoliaPublic"
+              value: "qa"
             - name: INSTANCE_TYPE
               value: "magnoliaPublic"
-          image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-backend"
+            - name: BASE_URL
+              value: "https://uat.zbschools.sg"
+          image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-backend"
           imagePullPolicy: IfNotPresent
           name: magolia-public
           ports:
@@ -117,6 +103,13 @@ spec:
             periodSeconds: 5
             successThreshold: 1
             timeoutSeconds: 2
+          resources:
+            limits:
+              cpu: "4"
+              memory: 12Gi
+            requests:
+              cpu: "4"
+              memory: 12Gi
           livenessProbe:
             failureThreshold: 6
             httpGet:
@@ -127,13 +120,6 @@ spec:
             periodSeconds: 30
             successThreshold: 1
             timeoutSeconds: 1
-          resources:
-            limits:
-              cpu: "4"
-              memory: 12Gi
-            requests:
-              cpu: "4"
-              memory: 12Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
@@ -142,7 +128,7 @@ spec:
       volumes:
         - name: pvc-public
           persistentVolumeClaim:
-             claimName: pvc-public-3
+             claimName: pvc-public-2
       dnsPolicy: ClusterFirst
       imagePullSecrets:
         - name: aws-ecr
@@ -170,16 +156,13 @@ spec:
       targetPort: 8080
   selector:
     app: magnolia-public-backend
-  sessionAffinity: ClientIP
-  sessionAffinityConfig:
-    clientIP:
-      timeoutSeconds: 86400
+  sessionAffinity: None
   type: ClusterIP
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: magnolia-public-backend-svc3
+  name: magnolia-public-backend-2-svc
   namespace: zb-schools
 spec:
   internalTrafficPolicy: Cluster
@@ -192,9 +175,6 @@ spec:
       protocol: TCP
       targetPort: 8080
   selector:
-    appn: magnolia-public-backend-3
-  sessionAffinity: ClientIP
-  sessionAffinityConfig:
-    clientIP:
-      timeoutSeconds: 86400
+    appn: magnolia-public-backend-2
+  sessionAffinity: None
   type: ClusterIP
