--- a/dev/magnolia-author-backend.yaml
+++ b/dev/magnolia-author-backend.yaml
@@ -47,7 +47,7 @@ spec:
     metadata:
       annotations:
         karpenter.sh/do-not-disrupt: "true"
-        kubectl.kubernetes.io/restartedAt: "2024-06-26T13:41:20+08:00"
+        kubectl.kubernetes.io/restartedAt: "2025-11-19T03:41:20+08:00"
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/role: "sph-zb-schools-cms-vault-reader"
         vault.hashicorp.com/agent-inject-secret-db-config: "zb-schools/db/creds/zb-schools-db-role"
@@ -68,22 +68,18 @@ spec:
                 - key: app
                   operator: In
                   values:
-                  - magnolia-author-backend
                   - magnolia-public-backend
+                  - magnolia-author-backend
                   - saas-homework-service
               topologyKey: kubernetes.io/hostname
       containers:
         - env:
             - name: TZ
               value: CST-8
-            - name: DB_NAME_PUBLIC
-              value: mgnl_author
             - name: BASE_URL
               value: "https://sit.zbschools.sg/authorFrontend"
             - name: ENV_TYPE
               value: "sit"
-            - name: "POD"
-              value: "magnoliaAuthor"
             - name: INSTANCE_TYPE
               value: "magnoliaAuthor"
           image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-author-backend"
@@ -114,8 +110,8 @@ spec:
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
-            - mountPath: /usr/local/tomcat/webapps/repositories
-              name: pvc-author
+             - mountPath: /usr/local/tomcat/webapps/repositories
+               name: pvc-author
       volumes:
         - name: pvc-author
           persistentVolumeClaim:
@@ -127,6 +123,7 @@ spec:
       schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
+      serviceAccount: service-account-sph-zb-schools
       serviceAccountName: service-account-sph-zb-schools
 ---
 apiVersion: v1
