--- a/dev/magnolia-public-backend-sts2.yaml
+++ b/dev/magnolia-public-backend-sts2.yaml
@@ -29,12 +29,7 @@ spec:
     matchLabels:
       app: magnolia-public-backend
       appn: magnolia-public-backend-2
-  strategy:
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 0
-    type: RollingUpdate
-    
+  serviceName: magnolia-public-backend-2-svc
   template:
     metadata:
       annotations:
